[gd_scene load_steps=4 format=3 uid="uid://bj8v718nyv73"]

[ext_resource type="Script" path="res://content/helpers/talker_helper.gd" id="1_yosfr"]
[ext_resource type="Theme" uid="uid://b8soj2bis0v14" path="res://content/themes/hud_theme.tres" id="2_pjk7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwx3e"]
size = Vector2(55, 81)

[node name="TalkerHelper" type="Area2D"]
script = ExtResource("1_yosfr")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -40.5)
shape = SubResource("RectangleShape2D_xwx3e")

[node name="TalkerLabel" type="Label" parent="."]
offset_left = -58.0
offset_top = -100.0
offset_right = 60.0
offset_bottom = -77.0
theme = ExtResource("2_pjk7n")
theme_type_variation = &"ActionLabel"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "gameHelp_talk"
horizontal_alignment = 1

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
